== Release 3.5.1

    * Fixed: Timer0 as PLC cycle in AVR's corrected.

    * Added: CTR reversive counter added.
      It like CTC but with decrement counting inside.

      Added 'Init' value in CTU,CTD,CTC,CTR counters.
      CTU,CTC counter start from 'Init' and count up to 'Max' value.
      CTC generate overflow impulse when Counter==Max.

      CTD,CTR counter start from 'Init' and count down to 'Min' value.
      CTR generate overflow impulse when Counter==Min.

      See LDmicro\SAMPLE\ctu_ctd_ctc.ld

== Release 3.5.0 experimental pre-release

    * Fixed: Address of configuration word(s) are checked and corrected on PIC controllers.

    * Fixed: On PIC microcontrollers there is bit 7 on OPTION_REG named
        _RBPU: PORTB Pull-up Enable bit or
        _WPUEN: Weak Pull-up Enable bit.
        Defaut value is 1 = PORTs pull-ups are disabled.
      Now bit 7 is cleared and pull-ups are enabled.

      Attention: Not all PIC ports have a pull-up resistors.
      See datasheets of the controller.
      Use an external resistor, if there is no internal pull-up.

    * Modified:
       Frequency of PWM in Element SET PWM was defined as
         int     targetFreq;
       now redefined as
         char    targetFreq[MAX_NAME_LEN];

       Max value in Element COUNTER and CIRCULAR COUNTER was defined as
         int     max;
       now redefined as
         char    max[MAX_NAME_LEN];

       Now you can use variable as argument of a COUNTER or SET PWM.
       It allow to create more sophisticated algorithms in LD.

    * You can specify literals as normal decimal numbers (10, 1234, -56).
      Added:
      You can specify hexadecimal numbers (0xA, 0x04D2, 0xffc8),
      octal numbers (0o12, 0o2322, 0o177710),
      binary numbers (0b1010, 0b10011010010, 0b1111111111001000)
      in most places that you could use a decimal number.

    * Added: You can replace LD elements in editor mode by pressing SPACE key.
      For example OSR->OSF->OSR,